[project]
name = "ai-agent-rag-system"
version = "0.1.0"
description = ""
authors = [
    {name = "Serena",email = "younginsong.eng@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=0.3.18,<0.4.0)",
    "langgraph (>=0.2.70,<0.3.0)",
    "langchain-openai (>=0.3.4,<0.4.0)",
    "langchain-community (>=0.3.17,<0.4.0)",
    "langchain-chroma (>=0.2.1,<0.3.0)",
    "langchain-ollama (>=0.2.3,<0.3.0)",
    "langchain-google-genai (>=2.0.9,<3.0.0)",
    "langchain-groq (>=0.2.4,<0.3.0)",
    "gradio (>=5.15.0,<6.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "wikipedia (>=1.4.0,<2.0.0)",

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
black = "^25.1.0"
ruff = "^0.9.5"
mypy = "^1.15.0"
pre-commit = "^4.1.0"

